<resources>
    <string name="app_name">EduConnect</string>
    <string name="app_docente">Docente</string>
    <string name="app_estudiante">Estudiante</string>

    <string name="felicitaciones">Felicitaciones</string>

    <!-- Login Activity -->
    <string name="derReservados">Todos los derechos reservados</string>
    <string name="Password">password</string>
    <string name="User">user</string>
    <string name="helperUser">Ej. 78451245</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Iniciar">Iniciar</string>
    <string name="retroalimentacion">Retroalimentacion</string>
    <string name="guardar">Guardar</string>


    <!--    Fragment Docentes-->
    <string name="title_preguntas">Preguntas</string>
    <string name="title_cursos">Cursos</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_repasos">Repasos</string>
    <string name="title_cuenta">Cuenta</string>

    <!--    botones-->
    <string name="volver">Volver</string>
    <string name="aceptar">Aceptar</string>

    <!--    Cursos-->
    <string name="ver_tareas">Ver Tareas</string>
    <string name="baco_preguntas">Banco de preguntas</string>
    <string name="examenes">Exámenes</string>
    <string name="registrar_asistencia">Registrar Asistencia</string>

    <!--    Tarea-->
    <string name="tarea">Tareas</string>
    <string name="menu_pregunta">¡Que desea hacer!</string>
    <string name="ver_entregas">Ver Entregables</string>
    <string name="vista_previa">Vista Previa</string>
    <string name="editar">Editar</string>
    <string name="fecha_limite">Fecha Limite:</string>

    <!--    crea tarea-->
    <string name="crear_tarea">Crear Tarea</string>
    <string name="ingrese_titulo_tarea">Ingrese Titulo</string>
    <string name="descripcion_tarea">Descripción de tarea</string>
    <string name="fecha_limite_entrega">Fecha limite de entrega</string>
    <string name="registro_exitoso">Tarea registrada correctamente</string>


    <!--    Estudiante-->
    <string name="title_home">Felicitaciones</string>
    <string name="title_dashboard">Felicitaciones</string>
    <string name="title_notifications">Felicitaciones</string>

    <!--    Fragment Estudiante-->
    <string name="title_aprende">Aprende</string>
    <string name="title_apunte">Apuntes</string>

    <!--    crea pregunta-->
    <string name="crear_pregunta">Crear Pregunta</string>
    <string name="ingrese_pregunta">Ingrese Pregunta</string>
    <string name="alternativa_correcta">Alternativa Correcta</string>
    <string name="alternativa_incorrecta">Alternativa Incorrecta</string>

<!--    tarea estudiante-->
    <string name="subir_tarea">Subir Tarea</string>
    <string name="subir_documento">Subir Documento</string>
    <string name="subir_imagen">Subir Imagen</string>

<!--    apuntes-->

</resources>