<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_pregunta"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/secondary"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTareas"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_weight="1"
                        android:text="@string/ver_tareas"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBancoPreguntas"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_weight="1"
                        android:text="@string/baco_preguntas"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvExamenes"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_weight="1"
                        android:text="@string/examenes"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAsistencia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_weight="1"
                        android:text="@string/registrar_asistencia"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>